--- a/src/ShipCard.scss
+++ b/src/ShipCard.scss
@@ -50,11 +50,10 @@
                 justify-content: center;
                 gap: $spacing;
                 span {
-                    // color: white;
                     background: white !important;
-                    border: 4px solid white;
-                    padding: $spacing;
-                    border-radius: $size * 2;
+                    border: 5px solid white;
+                    padding: .3em;
+                    border-radius: .5em;
                     width: $size;
                     height: $size;
                 }
