--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,11 @@
   text-align: center;
   background-color: hsl(220, 13%, 18%);
   color: white;
+
+  .print-bg {
+    -webkit-print-color-adjust:exact !important;
+    print-color-adjust:exact !important;
+  }
   
   .App-header {
     display: flex;
