--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,10 @@
     -webkit-print-color-adjust:exact !important;
     print-color-adjust:exact !important;
   }
+
+  .bold {
+    font-weight: bold;
+  }
   
   .App-header {
     display: flex;
