Stuff and things

--- a/src/AsteroidCards.scss
+++ b/src/AsteroidCards.scss
@@ -91,6 +91,7 @@
                 flex-grow: 1;
                 align-items: start;
                 justify-content: left;
+                text-transform: capitalize;
                 
                 .AsteroidCard-resourcesContainer {
                     display: flex;
