--- a/src/ShipCard.scss
+++ b/src/ShipCard.scss
@@ -23,6 +23,37 @@
 
     .ShipCard-back {
         justify-content: center;
+
+        .ShipCard-title {
+            font-size: .9em;
+            display: flex;
+            justify-content: center;
+            gap: 0.5em;
+            position: absolute;
+            top: 1em;
+            width: 100%;
+            opacity: .7;
+        }
+
+        .ShipCard-archetype {
+        }
+
+        .ShipCard-count {
+            display: flex;
+            justify-content: center;
+            gap: 0.5em;
+            position: absolute;
+            bottom: 1em;
+            width: 100%;
+            
+            .ShipCard-countPip {
+                width: 1em;
+                height: 1em;
+                border-radius: .5em;
+                background: black;
+                opacity: .2;
+            }
+        }
     }
 
     .ShipCard-front {
