--- a/src/Ships.scss
+++ b/src/Ships.scss
@@ -20,6 +20,8 @@
         top: 0;
         left: 0;
         width: 100%;
+        font-size: 1.5em;
+        font-weight: 800;
     }
     
     .ShipCard .ShipCard-face {
